PROJECT(mindy C)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# This needs to be in the root CMakeLists.txt.
ENABLE_TESTING()

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")

OPTION(MINDY_BUILD_DOCS "Build the Mindy documentation." OFF)
OPTION(MINDY_BUILD_MELANGE "Build (old) melange." OFF)

SET(MINDY_VERSION_MAJOR 2)
SET(MINDY_VERSION_MINOR 7)
SET(MINDY_VERSION_PATCH 0)
SET(MINDY_VERSION "${MINDY_VERSION_MAJOR}.${MINDY_VERSION_MINOR}.${MINDY_VERSION_PATCH}")

STRING(TOLOWER ${CMAKE_SYSTEM_NAME} TARGET_SYSTEM_NAME)
SET(MINDY_TARGET_PLATFORM "${CMAKE_SYSTEM_PROCESSOR}-${TARGET_SYSTEM_NAME}")

SET(MINDY_LIB_DIR "lib/dylan/${MINDY_VERSION}/${MINDY_TARGET_PLATFORM}")

INCLUDE(AddDylan)

ADD_SUBDIRECTORY(mindy)
ADD_SUBDIRECTORY(libraries)
ADD_SUBDIRECTORY(tools)
ADD_SUBDIRECTORY(tests)
ADD_SUBDIRECTORY(demos)

IF(MINDY_BUILD_DOCS)
  ADD_SUBDIRECTORY(documentation)
ENDIF()

INCLUDE(${CMAKE_SOURCE_DIR}/cmake/PackagingConfig.cmake)
